<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="com.hamdy.paytabsassignment.features.payment_checkout.tokenization.TokenizationModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:clickable="true"
        tools:context=".features.payment_checkout.MainActivity"
        android:focusable="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="20dp">


            <!--TOKEN-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle">

                <EditText
                    android:id="@+id/TOKEN"
                    style="@style/formFieldStyle"
                    android:hint="@string/TOKEN"
                    android:text="@={model.TOKEN}" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--CUSTOMER_EMAIL-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle">

                <EditText
                    android:id="@+id/CUSTOMER_EMAIL"
                    style="@style/EditTextEmailStyle"
                    android:hint="@string/CUSTOMER_EMAIL"
                    android:text="@={model.CUSTOMER_EMAIL}" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--CUSTOMER_PASSWORD-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle">

                <EditText
                    android:id="@+id/CUSTOMER_PASSWORD"
                    style="@style/formFieldStyle"
                    android:hint="@string/CUSTOMER_PASSWORD"
                    android:text="@={model.CUSTOMER_PASSWORD}" />
            </com.google.android.material.textfield.TextInputLayout>


            <!--FIRST_NAME-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle">

                <EditText
                    android:id="@+id/FIRST_NAME"
                    style="@style/formFieldStyle"
                    android:hint="@string/FIRST_NAME"
                    android:text="@={model.FIRST_NAME}" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--LAST_NAME-->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/TextInputStyle">

                <EditText
                    android:id="@+id/LAST_NAME"
                    style="@style/formFieldStyle"
                    android:hint="@string/LAST_NAME"
                    android:text="@={model.LAST_NAME}" />
            </com.google.android.material.textfield.TextInputLayout>



            <Button
                android:id="@+id/submitBtn"
                style="@style/formFieldStyle"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:text="@string/submit"
                android:textAlignment="center" />


        </LinearLayout>


    </ScrollView>
</layout>