<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="RESPONSE_CODE"
            type="String" />

        <variable
            name="TRANSACTION_ID"
            type="String" />

        <variable
            name="RESULT_MESSAGE"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        tools:context=".features.payment_result.PaymentResultActivity">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="@string/RESPONSE_CODE"
            android:layout_marginTop="20dp"
            android:text="@{@string/RESPONSE_CODE + ` : ` +  RESPONSE_CODE}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="@string/TRANSACTION_ID"
            android:layout_marginTop="20dp"
            android:text="@{@string/TRANSACTION_ID + ` : ` +  TRANSACTION_ID}"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            tools:text="@string/RESULT_MESSAGE"
            android:layout_marginTop="20dp"
            android:text="@{@string/RESULT_MESSAGE + ` : ` +  RESULT_MESSAGE}"/>

    </LinearLayout>
</layout>